more validation changes

--- a/join-us.html
+++ b/join-us.html
@@ -66,7 +66,7 @@
 							<img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" class="img-thumbnail"/></div>
 						</div>
 					</div>
-					</section>
+	</section>
 
 	<!-- 3rd section - Join Us -->
 
@@ -78,7 +78,7 @@
 					<p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
 				</div>
 			</div>
-            </div>
+		</div>
 	</section>
 
 	<!-- 4th section - call to action form -->
@@ -116,44 +116,40 @@
 									<button type="button" class="btn btn-info">Join Us</button>
 								</div>
 							</div>
-						</div>
 		</form>
+	</section>
 
-		<!-- Footer - Contact details -->
+	<!--Footer-Contact-details-->
 
-		<footer class="container-fluid footer-background">
-			<div class="row">
-				<div class="col-sm-12 col-md-4">
-					<h3>Find us here</h3>
-					<p>Studiofettle</p>
-					<p>Wilton Road, Humberston</p>
-					<p>NE Lincs, DN36 4AW</p>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4>Join Us</h4>
-					<p>Tel: 07752313632</p>
-					<p>Email: info@studiofettle.co.uk</p>
-
-					<!-- Copyright Footer - syntax from w3schools.com -->
-
-					<p id="bold">&copy;2020 vixwebdesigns.co.uk</p>
-
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4>Facebook</h4>
-					<p>Head over to our facebook page</p>
-					<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
-						id="fb-font-size"></i></a>
-				</div>
+	<footer class="container-fluid footer-background">
+		<div class="row">
+			<div class="col-sm-12 col-md-4">
+				<h3>Find us here</h3>
+				<p>Studiofettle</p>
+				<p>Wilton Road, Humberston</p>
+				<p>NE Lincs, DN36 4AW</p>
 			</div>
+			<div class="col-sm-12 col-md-4">
+				<h4>Join Us</h4>
+				<p>Tel: 07752313632</p>
+				<p>Email: info@studiofettle.co.uk</p>
+
+				<!-- Copyright Footer - syntax from w3schools.com -->
+
+				<p id="bold">&copy;2020 vixwebdesigns.co.uk</p>
+
 			</div>
-		</footer>
-
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
+			<div class="col-sm-12 col-md-4">
+				<h4>Facebook</h4>
+				<p>Head over to our facebook page</p>
+				<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
+					id="fb-font-size"></i></a>
+			</div>
+		</div>
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
